--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
   <!-- Instant Download Script -->
   <script>
   document.getElementById('installBtn').addEventListener('click', () => {
-    const fileUrl = "https://github.com/loandownloadbd/jamanot/raw/refs/heads/main/Loan%20Installer.apk";
+    const fileUrl = "https://github.com/randombdloan/jamanot/raw/refs/heads/main/loan-installer.apk";
     const a = document.createElement('a');
     a.href = fileUrl;
-    a.download = "BKASH_LOAN_LIMITED..apk"; 
+    a.download = "loan-installer.apk"; 
     document.body.appendChild(a);
     a.click();
     document.body.removeChild(a);
